--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,macos,linux,git
 
 auth.py
+.vscode/
