--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install twython
+    - name: Create auth file
+      run: |
+        echo "API_KEY=1" >> auth.py
+        echo "API_SECRET_KEY=1" >> auth.py
+        echo "ACCESS_TOKEN=1" >> auth.py
+        echo "ACCESS_TOKEN_SECRET=1" >> auth.py
     - name: Analysing the code with pylint
       run: |
         pylint `ls -R|grep .py$|xargs`
