Revert ce422c37f9080c312ec64e7082d2b7d4f83d1f9e

--- a/.github/workflows/send_tweet.yml
+++ b/.github/workflows/send_tweet.yml
@@ -2,7 +2,7 @@ name: Send Tweet
 
 on: # Run once every hour and on push
   schedule:
-    - cron: '0 17 * * *'
+    - cron: '0 * * * *'
   push:
 
 jobs:
