--- a/.gitignore
+++ b/.gitignore
@@ -220,4 +220,5 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,macos,linux,git
 
 auth.py
+masto_auth.py
 .vscode/
