--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,18 +6,21 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        python-version: 3.9
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-        pip install twython
+        pip install -r requirements.txt
     - name: Create auth file
       run: |
         echo "'''auth module'''" >> auth.py
@@ -27,4 +30,4 @@ jobs:
         echo "ACCESS_TOKEN_SECRET=1" >> auth.py
     - name: Analysing the code with pylint
       run: |
-        pylint `ls -R|grep .py$|xargs`
+        pylint --max-line-length=120 --disable=C0103,W1514,R1732,R0913,R1705,R1710,R0903,R0914,C0200,E0401 $(git ls-files '*.py')
