--- a/.github/workflows/send_tweet.yml
+++ b/.github/workflows/send_tweet.yml
@@ -4,6 +4,8 @@ on: # Run once every hour and on push
   schedule:
     - cron: '0 * * * *'
   push:
+    branches:
+      - master
 
 jobs:
   tweet:
@@ -11,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
