Add BlueSky support

--- a/.github/workflows/send_tweet.yml
+++ b/.github/workflows/send_tweet.yml
@@ -38,6 +38,14 @@ jobs:
       shell: bash
       env:
         MASTO_AUTH: ${{ secrets.MASTO_AUTH }}
+    - name: Create BlueSky auth file
+        run: |
+          printf "'''auth module for bluesky'''\n" >> bluesky_auth.py
+          printf "$BLUESKY_AUTH" >> bluesky_auth.py
+          printf "\n" >> bluesky_auth.py
+        shell: bash
+        env:
+          MASTO_AUTH: ${{ secrets.BLUESKY_AUTH }}
     - name: Send tweet
       run: |
         python beatles_lyrics_bot.py
